--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "axios": "^1.13.4"
+    "axios": "^1.13.4",
+    "kakao"
   },
   "scripts": {
     "start": "react-scripts start",
